@@ -37,12 +37,11 @@ if ($gallery->user->isAdmin() ) { ?>
             <span class="fineprint">
               Are you happy with Gallery?<br>
 	      Make us happy too!  Donate!<br>
-	      (only admins see this message and button)<br>
             </span>
           </td>
           <td width="90" align="right">
             <a href="<?php echo $gallery->url ?>/donate.php?donate_tag=v<?php echo $gallery->version ?>"><img align="right"
-              src="<?php echo getImagePath('donate.jpg') ?>" width="88" height="31" border="0" ALT="<?php echo _("Donate to Gallery now!!") ?>"></a>
+              src="<?php echo getImagePath('donate.png') ?>" width="80" height="15" border="0" ALT="<?php echo _("Donate to Gallery now!!") ?>"></a>
           </td>
           <?php } ?>
         </tr>
